src/test/resources/tests/run-pass/typeck/assign-string.rs
//! SKIP
fn main() {
    let a: str = "Test";
}