src/test/resources/tests/compile-fail/semck/call-undeclared.rs
fn main() {
    //! ERROR(4:5): no such function: `a`
    //! ERROR(4:5): cannot call non-function
    a();
}